# agents

./: .env.example  .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  CODE_REVIEW_AND_SAAS_ASSESSMENT.md  CONTRIBUTING.md  Dockerfile  IDEA.md  Makefile  README.md  SECURITY_FIXES.md  SECURITY_FIXES_PRIORITY2.md  SECURITY_SUMMARY.md  alembic.ini  debug_failures.py  debug_simple.py  docker-compose.prod.yml  docker-compose.yml  minimal_test.csv  minimal_test.sh  process_translations.sh  process_vocabulary.sh  process_vocabulary_jp.sh  pyproject.toml  simple_test.sh  test_fixed.sh  test_process_data.sh
.claude/skills/purple-hat/: QUICK-REF.md  README.md  SKILL-SUMMARY.md  SKILL.md  skill.json
.github/: labeler.yml
.github/workflows/: ci.yml  code-coverage.yml  deploy.yml  integration-tests.yml  labeler.yml  migrations.yml  release.yml  security.yml  stale.yml
agents/: __init__.py  cli.py
agents/adapters/: __init__.py  base.py  csv_adapter.py  json_adapter.py  jsonl_adapter.py  sqlite_adapter.py  text_adapter.py
agents/api/: app.py  job_manager.py  schemas.py  security.py
agents/api/auth/: __init__.py  backend.py  config.py  manager.py  schemas.py  users.py
agents/api/routes/: __init__.py  admin.py  api_keys.py  files.py  jobs.py  (+1 more)
agents/core/: __init__.py  circuit_breaker.py  engine.py  llm_client.py  postprocessor.py  prompt.py
agents/db/: __init__.py  base.py  models.py  session.py
agents/processing_service/: __init__.py  app.py  db_helpers.py  processor.py  schemas.py  usage_tracker.py
agents/storage/: __init__.py  client.py  config.py
agents/taskq/: __init__.py  client.py
agents/utils/: config.py  config_env.py  content_moderation.py  incremental_writer.py  model_validation.py  progress.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_platform_keys_and_pricing.py  003_system_settings.py  375c38d9e610_add_error_message_to_web_jobs.py
data/: output_preview.json  output_processed.json  test_vocab.json  vocabulary.json  vocabulary_flat.json  vocabulary_light.json
docs/: ui.md
docs/deployment/: cloud.md  docker.md
docs/examples/: classification.yaml  summarization.yaml  translation.yaml
docs/plans/: 2025-01-27-circuit-breaker-design.md  2025-01-27-circuit-breaker-implementation.md  2025-11-19-agents-design.md  2025-11-19-agents-implementation.md  2025-12-25-web-app-deployment-design.md
scripts/: fetch-pr-details.sh  resolve-pr-comment-graphql.py  setup.sh
scripts/sql/: setup_taskq.sql
tests/: __init__.py  test_adapters.py  test_circuit_breaker.py  test_circuit_breaker_integration.py  test_cli.py  test_config.py  test_content_moderation.py  test_engine.py  test_incremental_writer.py  test_integration.py  test_llm_client.py  test_model_validation.py  test_progress.py  test_prompt.py  test_prompt_injection.py  test_sql_injection.py
tests/e2e/: __init__.py  test_web_flow.py
tests/fixtures/: sample_products.csv  sample_prompts.md  sample_reviews.jsonl  sample_translations.json
tmp/: data_rows.csv  fixed_sample.csv  header.csv  minimal_test.csv  non_empty_sample.csv  small_test.csv  test_with_translations.csv
web/: next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: layout.tsx  page.tsx
(+33 files in other folders)
