[project]
name = "agents"
version = "0.1.0"
description = "LLM batch processing CLI tool"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
# NOTE: Python 3.14 is specified intentionally for forward-compatibility testing.
# For production use, change to ">=3.12" until Python 3.14 is released.
requires-python = ">=3.14"
dependencies = [
    "openai>=1.50.0",
    "click>=8.1.7",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "tenacity>=9.0.0",
    "rich>=13.9.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.111.1",
    "uvicorn>=0.30.3",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Auth
    "fastapi-users[sqlalchemy,oauth]>=13.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Storage
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    # Email
    "resend>=2.0.0",
    # Security
    "cryptography>=41.0.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Error monitoring
    "sentry-sdk[fastapi]>=1.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
agents = "agents.cli:cli"
agents-api = "agents.api.app:main"
agents-worker = "agents.processing_service.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
# NOTE: py314 specified for forward-compatibility; use py312 for current production
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
# NOTE: 3.14 specified for forward-compatibility; use 3.12 for current production
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
